--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Mandi App",
   "short_name": "Mandi",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/Fsal-byora/",
+  "scope": "/Fsal-byora/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
